open api anotation for the documenting our endpoints
